# symcc

./: .gitignore  CMakeLists.txt
compiler/: Pass.cpp  Pass.h  Runtime.cpp  Runtime.h  Symbolizer.cpp  Symbolizer.h  afl-clang-fast++.in  sym++.in  symcc-afl++.in  symcc-afl-clang++.in  symcc-afl-clang.in  symcc-afl.in  symcc.in
libc_harness/: Makefile
runtime/: CMakeLists.txt  LibcWrappers.cpp  RuntimeCommon.cpp  RuntimeCommon.h  Shadow.h
runtime/qsym_backend/: CMakeLists.txt  Runtime.cpp
runtime/rust_backend/: CMakeLists.txt  Runtime.cpp  RustInterface.h  RustRuntime.h
runtime/simple_backend/: CMakeLists.txt  Runtime.cpp
util/: gdb_helper.py
util/symcc_fuzzing_helper/src/: symcc.rs
